[package]
name = "sapio-wasm-jamesob-vault"
version = "0.1.0"
description = "An Example Sapio Application based on https://github.com/jamesob/simple-ctv-vault"
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/plugin.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde = "1.0"
serde_derive = "1.0"

sapio.workspace = true
batching-trait.workspace = true
sapio-base.workspace = true
sapio-contrib.workspace = true
sapio-ctv-emulator-trait.workspace = true
sapio-wasm-plugin.workspace = true
sapio-wasm-plugin.features = ["client"]

[dependencies.schemars]
version = "0.8.0"
features = ['impl_json_schema']

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0"
features = ['use-serde']

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0"
features = ['compiler', 'use-serde', 'use-schemars', 'serde']
optional = true
