[package]
name = "sapio-wasm-nft-trait"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.simp-pack]
path = "../../simp-pack"
version = "0.1.0"
[dependencies.schemars]
version = "0.8.0"
features = ['impl_json_schema']

[dependencies.bitcoin]
package = "sapio-bitcoin"
version = "0.28.0-rc.2"
features = ['use-serde']
[dependencies.sapio]
path = "../../sapio"
version = "0.2.0"

[dependencies.sapio-base]
path = "../../sapio-base"
version = "0.2.0"

[dependencies.sapio-wasm-plugin]
path = "../../plugins"
version = "0.2.0"
features = ["client"]


[dependencies.sapio-trait]
path="../../sapio-trait"
version = "0.2.0"

[dependencies.sapio-ctv-emulator-trait]
path="../../emulator-trait"
version = "0.2.0"

[dependencies.miniscript]
package = "sapio-miniscript"
version = "^7.0.0-10"
features = ['compiler', 'use-serde', 'use-schemars', 'serde']
optional = true

